arma-rs/tests/derive/struct_fail_attr.stderr
error: expected #[arma(...)]
 --> tests/derive/struct_fail_attr.rs:4:3
  |
4 | #[arma]
  |   ^^^^

error: unexpected literal in nested attribute
 --> tests/derive/struct_fail_attr.rs:8:8
  |
8 | #[arma("literal")]
  |        ^^^^^^^^^

error: unknown attribute `unknown`
  --> tests/derive/struct_fail_attr.rs:12:8
   |
12 | #[arma(unknown)]
   |        ^^^^^^^

error: unknown attribute `unknown::path`
  --> tests/derive/struct_fail_attr.rs:16:8
   |
16 | #[arma(unknown::path)]
   |        ^^^^^^^^^^^^^

error: duplicate attribute `duplicate`
  --> tests/derive/struct_fail_attr.rs:20:19
   |
20 | #[arma(duplicate, duplicate)]
   |                   ^^^^^^^^^

error: duplicate attribute `duplicate::path`
  --> tests/derive/struct_fail_attr.rs:25:8
   |
25 | #[arma(duplicate::path)]
   |        ^^^^^^^^^^^^^^^
